--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@google/genai": "^1.33.0",
     "lucide-react": "^0.561.0",
     "react-dom": "^19.2.3",
-    "react": "^19.2.3"
+    "react": "^19.2.3",
+    "@supabase/supabase-js": "2.39.0",
+    "jspdf": "2.5.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
