--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^19.2.3",
     "react": "^19.2.3",
     "@supabase/supabase-js": "2.39.0",
-    "jspdf": "2.5.1"
+    "jspdf": "2.5.1",
+    "resend": "^6.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
